@@ -161,13 +161,13 @@ static int get_n_samples (int T, int pd, int mmin)
 {
     int k = (int) sqrt((double) T);
 
-    /* If pd >= mmin and is not too far from k, it may make sense
-       to use pd instead of sqrt(T) as the subsample length. This
-       will, e.g., make each subsample a year, with quarterly or
-       monthly data.
+    /* If pd >= mmin and is "not too far" from k, it may make sense to
+       use pd instead of sqrt(T) as the subsample length. This will,
+       e.g., make each subsample a year, with quarterly or monthly
+       data.
     */
 
-    if (pd >= mmin && pd >= k/2 && pd <= 2*k) {
+    if (pd >= mmin && pd >= 2.0*k/3.0 && pd <= 3.0*k/2.0) {
 	k = pd;
     }
 
